--- a/Lab_tasks/task_2/task_2 (ssc).html
+++ b/Lab_tasks/task_2/task_2 (ssc).html
@@ -1,70 +1,160 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>SSC Marksheet</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSC Marksheet - Ryden</title>
 </head>
+
 <body style="font-family: Arial, sans-serif;">
 
-    <h2 style="text-align:center;">BOARD OF SECONDARY EDUCATION KARACHI</h2>
-    <h2 style="text-align:center;">Examination Marksheet SSC PART - I & II</h2>
-    <h3 style="text-align:center;">Statement of Marks</h3>
-    <h3 style="text-align:center;">Student Name: Muhammad Umair Amin</h3>
-    <h4 style="text-align:center;">Institution: White House Grammer School</h4>
-    <hr>
+<table border="1" align="center" cellspacing="0" cellpadding="0" width="1000">
+    <tr>
+        <td>
 
-    <table border="1" width="100%" style="text-align: center; border-collapse: collapse;">
-        <tr>
-            <th>Subject</th>
-            <th>Total Marks</th>
-            <th>Marks Obtained</th>
-            <th>Grade</th>
-        </tr>
-        <tr>
-            <td>English</td>
-            <td>100</td>
-            <td>85</td>
-            <td>A</td>
-        </tr>
-        <tr>
-            <td>Mathematics</td>
-            <td>100</td>
-            <td>90</td>
-            <td>A+</td>
-        </tr>
-        <tr>
-            <td>Science</td>
-            <td>100</td>
-            <td>88</td>
-            <td>A</td>
-        </tr>
-        <tr>
-            <td>Computer Studies</td>
-            <td>100</td>
-            <td>92</td>
-            <td>A+</td>
-        </tr>
-        <tr>
-            <td>Urdu</td>
-            <td>100</td>
-            <td>80</td>
-            <td>A</td>
-        </tr>
-        <tr>
-            <th>Total</th>
-            <th>500</th>
-            <th>435</th>
-            <th>A+</th>
-        </tr>
-    </table>
+            <table width="100%" cellpadding="10">
+                <tr>
+                    <td align="left"><strong>SERIAL NO.</strong><br>02543423</td>
+                    <td align="right"><strong>G3434</strong></td>
+                </tr>
+            </table>
 
-    <p style="text-align:center; margin-top:20px;">
-        <strong>Result:</strong> Passed
-    </p>
+            <table align="center">
+                <tr>
+                    <td align="center">
+                        <h1>Board of Secondary Education, Karachi</h1>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <img src="logo.jpg" width="180">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <h2>
+                            STATEMENT OF MARKS<br>
+                            S.S.C. PART I & II EXAMINATION<br>
+                            __________________________
+                        </h2>
+                    </td>
+                </tr>
+            </table>
+            <table width="900" align="center" cellpadding="8">
+                <tr>
+                    <td><strong>EXAMINATION</strong></td>
+                    <td>ANNUAL</td>
+                    <td><strong>ROLL NUMBER</strong></td>
+                    <td>—</td>
+                </tr>
+                <tr>
+                    <td><strong>NAME</strong></td>
+                    <td colspan="3">MUHAMMAD UMAIR AMIN</td>
+                </tr>
+                <tr>
+                    <td><strong>INSTITUTION</strong></td>
+                    <td colspan="3">WHITE HOUSE GRAMMER SCHOOL</td>
+                </tr>
+            </table>
 
-    <hr>
-    <p style="text-align:center;">Signature of Controller: ____________________</p>
+            <br>
+
+            <table border="1" cellspacing="0" cellpadding="6" align="center" width="900">
+                <thead>
+                    <tr>
+                        <th rowspan="2">S.No</th>
+                        <th rowspan="2">Subjects</th>
+                        <th colspan="3">Marks</th>
+                        <th rowspan="2">Grade</th>
+                        <th rowspan="2">Remarks</th>
+                    </tr>
+                    <tr>
+                        <th>Total</th>
+                        <th>Obtained</th>
+                        <th>Result</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td align="center">1</td>
+                        <td>English</td>
+                        <td align="center">100</td>
+                        <td align="center">85</td>
+                        <td align="center">Pass</td>
+                        <td align="center">A</td>
+                        <td align="center">CLEARED</td>
+                    </tr>
+
+                    <tr>
+                        <td align="center">2</td>
+                        <td>Mathematics</td>
+                        <td align="center">100</td>
+                        <td align="center">90</td>
+                        <td align="center">Pass</td>
+                        <td align="center">A+</td>
+                        <td align="center">CLEARED</td>
+                    </tr>
+
+                    <tr>
+                        <td align="center">3</td>
+                        <td>Science</td>
+                        <td align="center">100</td>
+                        <td align="center">88</td>
+                        <td align="center">Pass</td>
+                        <td align="center">A</td>
+                        <td align="center">CLEARED</td>
+                    </tr>
+
+                    <tr>
+                        <td align="center">4</td>
+                        <td>Computer Studies</td>
+                        <td align="center">100</td>
+                        <td align="center">92</td>
+                        <td align="center">Pass</td>
+                        <td align="center">A+</td>
+                        <td align="center">CLEARED</td>
+                    </tr>
+
+                    <tr>
+                        <td align="center">5</td>
+                        <td>Urdu</td>
+                        <td align="center">100</td>
+                        <td align="center">80</td>
+                        <td align="center">Pass</td>
+                        <td align="center">A</td>
+                        <td align="center">CLEARED</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <br>
+
+            <table border="1" align="center" width="900" cellpadding="10">
+                <tr>
+                    <td><strong>TOTAL MARKS</strong></td>
+                    <td align="right"><strong>435 / 500</strong></td>
+                </tr>
+                <tr>
+                    <td><strong>RESULT</strong></td>
+                    <td align="right"><strong>PASSED (A+)</strong></td>
+                </tr>
+            </table>
+
+            <br><br>
+
+            <table width="900" align="center">
+                <tr>
+                    <td align="left">DATE OF ISSUE</td>
+                    <td align="center">ASSISTANT DIRECTOR SYSTEMS</td>
+                    <td align="right">CONTROLLER OF EXAMINATION</td>
+                </tr>
+            </table>
+
+            <br>
+
+        </td>
+    </tr>
+</table>
 
 </body>
 </html>
